--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "on-covid-19": "^0.1.3"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.7",
+    "mongoose-timestamp": "^0.6.0",
+    "object-to-xml": "^2.0.0",
+    "on-covid-19": "^0.1.3",
+    "restify": "^8.5.1",
+    "restify-errors": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
