--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongoose": "^5.9.7",
     "mongoose-timestamp": "^0.6.0",
+    "morgan": "^1.10.0",
+    "node-statsd": "^0.1.1",
     "object-to-xml": "^2.0.0",
     "on-covid-19": "^0.1.3",
+    "response-time": "^2.3.2",
     "restify": "^8.5.1",
     "restify-errors": "^8.0.2"
   },
